[gd_scene load_steps=6 format=3 uid="uid://d1dl782jdp3vd"]

[ext_resource type="Theme" uid="uid://dlfpsajfoyq0w" path="res://ui-theme.tres" id="1_e4nq3"]
[ext_resource type="Texture2D" uid="uid://bg2dpnlcosp0u" path="res://3rdparty/kenney/ui/panel_beige.png" id="2_ta4s3"]
[ext_resource type="Script" path="res://entities/ui/LevelScoreDialog.gd" id="2_vuhiq"]
[ext_resource type="Texture2D" uid="uid://c3jhuwfhgn6rh" path="res://assets/cheeseboi.png" id="3_skleo"]
[ext_resource type="Texture2D" uid="uid://dql3hwv2na54a" path="res://assets/boot.png" id="4_l4op6"]

[node name="LevelScoreDialog" type="PanelContainer" node_paths=PackedStringArray("header_label", "cheeseboi_label", "turns_label", "score_label")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e4nq3")
script = ExtResource("2_vuhiq")
header_label = NodePath("Header/VBoxContainer/HeaderLabel")
cheeseboi_label = NodePath("Header/VBoxContainer/CenterContainer/GridContainer/Mice")
turns_label = NodePath("Header/VBoxContainer/CenterContainer/GridContainer/Turns")
score_label = NodePath("Header/VBoxContainer/CenterContainer/GridContainer/Score")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_ta4s3")
patch_margin_left = 14
patch_margin_top = 13
patch_margin_right = 18
patch_margin_bottom = 11

[node name="Header" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Header"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="Header/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Level Cleared!"

[node name="CenterContainer" type="CenterContainer" parent="Header/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Header/VBoxContainer/CenterContainer"]
layout_mode = 2
columns = 3

[node name="TextureRect" type="TextureRect" parent="Header/VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("3_skleo")
stretch_mode = 4

[node name="Label2" type="Label" parent="Header/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "Mice eaten:"

[node name="Mice" type="Label" parent="Header/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "0"

[node name="TextureRect2" type="TextureRect" parent="Header/VBoxContainer/CenterContainer/GridContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("4_l4op6")
stretch_mode = 4

[node name="Label" type="Label" parent="Header/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "Turns taken:"

[node name="Turns" type="Label" parent="Header/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "0"

[node name="TextureRect3" type="TextureRect" parent="Header/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Header/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "SCORE:"

[node name="Score" type="Label" parent="Header/VBoxContainer/CenterContainer/GridContainer"]
layout_mode = 2
text = "0"

[node name="CenterContainer2" type="CenterContainer" parent="Header/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Header/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="NextLevelButton" type="Button" parent="Header/VBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
text = "Next Level"

[node name="LevelSelectButton" type="Button" parent="Header/VBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
text = "Level Select"

[connection signal="pressed" from="Header/VBoxContainer/CenterContainer2/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Header/VBoxContainer/CenterContainer2/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
